# kamelle

./: LICENSE  README.md  kamelle.sh  pyproject.toml
kamelle/: cli.py  config.py  models.py  openrouter.py  ranking.py  state.py
scripts/: install-hourly-refresh.sh  install-local.sh  uninstall-hourly-refresh.sh
