[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kamelle"
version = "0.1.0"
description = "Catch the best free OpenRouter models for OpenClaw"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]
authors = [
  { name = "Mr.L. + Kaia" }
]
license = { text = "MIT" }
keywords = ["openrouter", "openclaw", "llm", "cli", "models"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/l0hde/kamelle"
Repository = "https://github.com/l0hde/kamelle"
Issues = "https://github.com/l0hde/kamelle/issues"

[project.scripts]
kamelle = "kamelle.cli:main"

[tool.setuptools]
packages = ["kamelle"]
